--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,12 +6,11 @@
     android:weightSum="100">
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/myImage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="70"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/ic_launcher" />
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/image_description"
