clear code, remove excess button, fix toasts, hide keyboard

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="27dp"
         android:layout_marginEnd="26dp"
-        android:text="@string/favpic" />
+        android:text="@string/favoritePic" />
 
     <SearchView
         android:id="@+id/searchView"
